fix on mobile render for vote views

--- a/imports/ui/css/earth.css
+++ b/imports/ui/css/earth.css
@@ -6287,7 +6287,10 @@ blockquote {
     padding-left: 10px;
   }
   .content.content-agora {
+    min-width: 0px;
     margin-top: -50px;
+    padding-right: 10px;
+    padding-left: 10px;
     box-shadow: 0 0 0 0 #000;
   }
   .micro-button.agora-button {
