--- a/imports/ui/css/extra.css
+++ b/imports/ui/css/extra.css
@@ -132,3 +132,9 @@ html {
   overflow: scroll;
   -webkit-overflow-scrolling: touch;
 }
+
+#content {
+    overflow: hidden;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
+}
